[package]
name = "pbs"
version = "0.1.1"
edition = "2024"
publish = false

[dependencies]
prost-types = { version = "0.14.1", default-features = false }
pbjson-types = { version = "0.8.0", default-features = false, optional = true }
prost = { version = "0.14.1", default-features = false, features = ["derive"] }

[features]
default = []
std = []
pub-deps = []
serde-json = ["pbjson-types"]
