[package]
name = "pbs"
version = "0.1.3"
edition = "2024"
publish = false

[dependencies]
prost-types = { version = "0.14.3", default-features = false }
pbjson-types = { version = "0.9.0", default-features = false, optional = true }
prost = { version = "0.14.3", default-features = false, features = ["derive"] }

[features]
default = []
std = ["prost-types/std"]
pub-deps = []
serde-json = ["pbjson-types"]
