[package]
name = "pbs"
version = "0.1.5"
edition = "2024"
publish = false

[dependencies]
prost-types = { version = "0.14.3", default-features = false }
pbjson-types = { version = "0.9.0", default-features = false, optional = true }
prost = { version = "0.14.3", default-features = false, features = ["derive"] }
serde = { version = "1.0.228", default-features = false, features = [
    "derive",
], optional = true }

[features]
default = []
std = ["prost-types/std"]
pub-deps = []
serde-json = ["pbjson-types", "dep:serde", "std"]

[build-dependencies]
glob = "0.3.3"
pbjson-build = "0.9.0"
prost-build = "0.14.3"
